--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -39,10 +39,10 @@
 
 .AppContainer {
   text-align: center;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 
 .darkAppContainer {
 text-align: center;
-background-color: #010D26;
+background-color: #313131;
 }
