--- a/Client/src/Components/NavBar/NavBar.module.css
+++ b/Client/src/Components/NavBar/NavBar.module.css
@@ -35,9 +35,10 @@
 }
 
 .sections ul li {
-  margin-right: 20px;
+  margin-right: 60px;
   cursor: pointer;
   font-size: 20px;
+  white-space: nowrap;
 }
 
 .darkSections ul li {
@@ -121,4 +122,177 @@ input:checked + .slider:before {
   left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
   background: #303136;
   box-shadow: inset -3px -2px 5px -2px #06024d, inset -10px -4px 0 0 #179bed;
+}
+
+@media (max-width: 850px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+  }
+
+  .logo {
+    width: 80px;
+    height: 80px;
+    margin-left: 2%;
+    order: -1;
+  }
+
+  .sections ul {
+    list-style: none;
+    display: flex;
+    margin-top: 20px; 
+
+  }
+  
+  .sections ul li {
+    padding-right: 20px;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  
+  .Theme {
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+    order: -1;
+    margin-top: -6%;
+  }
+  
+  .Idioma {
+    margin-left: 30px;
+    margin-right: 40px;
+  }
+}
+
+
+
+@media (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+  }
+
+  .logo {
+    width: 80px;
+    height: 80px;
+    margin-left: 2%;
+    order: -1;
+  }
+
+  .sections ul {
+    list-style: none;
+    display: flex;
+    margin-top: 8%;  
+
+  }
+  
+  .sections ul li {
+    margin-right: 30px;
+    padding-right: 0px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+  
+  .Theme {
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+    order: -1;
+    margin-top: -10%;
+  }
+  
+  .Idioma {
+    margin-left: 20px;
+    margin-right: 30px;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+  }
+
+  .logo {
+    width: 80px;
+    height: 80px;
+    margin-left: 2%;
+    order: -1;
+  }
+
+  .sections ul {
+    list-style: none;
+    display: flex;
+    margin-top: 8%; 
+
+  }
+  
+  .sections ul li {
+    margin-right: 20px;
+    padding-right: 0px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+  
+  .Theme {
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+    order: -1;
+    margin-top: -10%;
+  }
+  
+  .Idioma {
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .navbar {
+    padding: 10px 0;
+  }
+
+  .logo {
+    width: 60px;
+    height: 60px;
+    margin-left: 2%;
+    order: -1;
+  }
+
+  .sections ul {
+    list-style: none;
+    display: flex;
+    margin-top: 8%; 
+
+  }
+  
+  .sections ul li {
+    margin-right: 10px;
+    padding-right: 0px;
+    cursor: pointer;
+    font-size: 15px;
+  }
+  
+  .Theme {
+    display: flex;
+    align-items: center;
+    margin-right: 0px;
+    order: -1;
+    margin-top: -10%;
+  }
+  
+  .Idioma {
+    margin-left: 10px;
+    margin-right: 20px;
+  }
+  .Idioma button {
+    font-size: 15px;
+    font-weight: bold  ;
+  }
 }
