--- a/Client/src/Components/Projects/Projects.module.css
+++ b/Client/src/Components/Projects/Projects.module.css
@@ -303,6 +303,89 @@ a:hover {
     width: 10%;
   }
 }
-@media screen and (max-width: 480px) {
-  
+
+
+@media screen and (max-width: 610px) {
+  .proyecto p {
+    order: 3;
+    max-width: 450px;
+    font-size: 12px;
+  }
+
+  .tecnologias {
+    order: 4;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .tecnologias span {
+    padding: 3px 6px;
+    font-size: 14px;
+  }
+
+  .Botonlink {
+    order: 5;
+    margin-top: 20px;
+    width: 10%;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .proyecto h3 {
+    order: 1;
+    font-size: 14px;
+  }
+  .proyecto p {
+    order: 3;
+    max-width: 450px;
+    font-size: 11px;
+  }
+
+  .tecnologias {
+    order: 4;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .tecnologias span {
+    padding: 3px 6px;
+    font-size: 12px;
+  }
+
+  .Botonlink {
+    order: 5;
+    margin-top: 20px;
+    width: 10%;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .proyecto h3 {
+    order: 1;
+    font-size: 14px;
+  }
+  .proyecto p {
+    order: 3;
+    max-width: 450px;
+    font-size: 11px;
+  }
+
+  .tecnologias {
+    order: 4;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .tecnologias span {
+    padding: 3px 6px;
+    font-size: 12px;
+  }
+
+  .Botonlink {
+    order: 5;
+    margin-top: 20px;
+    width: 10%;
+  }
 }
