--- a/Client/src/Components/RightSideBar/RightSideBar.module.css
+++ b/Client/src/Components/RightSideBar/RightSideBar.module.css
@@ -82,3 +82,24 @@
     transform: translate(3px, 3px);
     box-shadow: 0px 0px var(--main-color);
   }
+
+
+  @media (max-width: 1700px) {
+    .buttonCV {
+      position: absolute;
+      right: 20px; 
+      left: auto;
+      bottom: 20px;
+      transition: none;
+    }
+  }
+
+  @media (max-width: 700px) {
+    .buttonCV {
+      width: 145px;
+      height: 35px;
+    }
+    .buttonCV .svg {
+      width: 15px;
+    }
+  }
