--- a/Client/src/Components/SideBar/SideBar.module.css
+++ b/Client/src/Components/SideBar/SideBar.module.css
@@ -145,4 +145,27 @@
     color: #ffffff;
   }
   
+  @media (max-width: 1750px) {
+    .sidebar {
+      position: absolute;
+      bottom: 0;
+      left: 10px;
+      padding: 20px;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .social .social-item {
+      margin: 10px 0;
+      width: 35px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .social .social-item a svg {
+      width: 16px;
+      height: 16px;
+    }
+  }
   
